--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         Rebecca Padgett
       </button>
     </p>
-    <div role="tooltip">
+    <div role="tooltip" aria-label="Social media tooltip">
       <ul class="social__list flex" data-js-tooltip aria-expanded="false" id="social-list">
         <li>
           <a href="https://github.com/bccpadge" class="social__list-link" target="_blank" aria-label="Github profile for Rebecca Padgett">
